--- a/OdeToFood/Pages/Restaurants/List.cshtml
+++ b/OdeToFood/Pages/Restaurants/List.cshtml
@@ -4,6 +4,15 @@
 }
 <h1>Restaurants</h1>
 
+<form method="get">
+	<div class="form-group">
+		<div class="input-group">
+			<input class="form-control" type="search" value="" name="searchTerm"/>
+			<button class="btn btn-primary">Search</button>
+		</div>
+	</div>
+</form>
+
 <table class="table">
 	@foreach (var restaurant in Model.Restaurants)
 	{
