Added model binding

--- a/OdeToFood/Pages/Restaurants/List.cshtml
+++ b/OdeToFood/Pages/Restaurants/List.cshtml
@@ -7,7 +7,7 @@
 <form method="get">
 	<div class="form-group">
 		<div class="input-group">
-			<input class="form-control" type="search" value="" name="searchTerm"/>
+			<input class="form-control" type="search" asp-for="SearchTerm"/>
 			<button class="btn btn-primary">Search</button>
 		</div>
 	</div>
@@ -23,4 +23,5 @@
 		</tr>
 	}
 </table>
+@Model.SearchTerm
 @Model.Message
