--- a/OdeToFood/Pages/Restaurants/List.cshtml
+++ b/OdeToFood/Pages/Restaurants/List.cshtml
@@ -20,6 +20,9 @@
 			<td>@restaurant.Name</td>
 			<td>@restaurant.Location</td>
 			<td>@restaurant.Cuisine</td>
+			<td>
+				<a class="btn btn-primary" asp-page="./Detail" asp-route-restaurantId="@restaurant.Id">Details</a>
+			</td>
 		</tr>
 	}
 </table>
