--- a/OdeToFood/Pages/Restaurants/Detail.cshtml
+++ b/OdeToFood/Pages/Restaurants/Detail.cshtml
@@ -3,6 +3,9 @@
 @{
 }
 <h1>Your restaurant details</h1>
+@if(Model.Message != null){
+	<div class="text text-info">@Model.Message</div>
+}
 <div> Id: @Model.Restaurant.Id </div>
 <div> Name: @Model.Restaurant.Name </div>
 <div> Location: @Model.Restaurant.Location </div>
