--- a/OdeToFood/Pages/Restaurants/Edit.cshtml
+++ b/OdeToFood/Pages/Restaurants/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@page "{restaurantId:int}"
+﻿@page "{restaurantId:int?}"
 @model OdeToFood.Pages.Restaurants.EditModel
 @{
 	ViewData["title"] = "Edit a Restaurant";
