--- a/OdeToFood/Pages/Restaurants/List.cshtml
+++ b/OdeToFood/Pages/Restaurants/List.cshtml
@@ -24,6 +24,7 @@
 			<td>
 				<a class="btn btn-primary" asp-page="./Detail" asp-route-restaurantId="@restaurant.Id">Details</a>
 				<a class="btn btn-primary" asp-page="./Edit" asp-route-restaurantId="@restaurant.Id">Edit</a>
+				<a class="btn btn-primary" asp-page="./Delete" asp-route-restaurantId="@restaurant.Id">Delete</a>
 			</td>
 		</tr>
 	}
